-fully functional, first commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,21 @@
     <string name="placeholder">Placeholder</string>
     <string name="geo_api_key">AIzaSyCUSRQAQCa5CmKPWe_VWdlArClGjQTXAZE</string>
     <string name="place_loading_message">Getting timezone</string>
-    <string name="action_places">Places</string>
-    <string name="activity_title_places">Places</string>
+    <string name="activity_title_location">Location</string>
+    <string name="no_places_message">Add your city to show prayer timings</string>
+    <string name="perf_prayers_method_key">perf_prayer_method_key</string>
+    <string name="app_bar_title">You have</string>
+    <string name="no_timings_message">Can\'t load prayer timings; you might be offline!</string>
+    <string name="fajr">Fajr</string>
+    <string name="dhuhr">Dduhr</string>
+    <string name="asr">Asr</string>
+    <string name="shurouq">Shurouq</string>
+    <string name="maghrib">Maghrib</string>
+    <string name="isha">Isha\'a</string>
+    <string name="midnight">Midnight</string>
+    <string name="next_prayer_subtitle_text_view">Till %1$s</string>
+    <string name="today_prayers_title">Today</string>
+    <string name="tomorrow_prayers_title">Tomorrow</string>
+    <string name="anchor">0000</string>
+    <string name="action_location">Location</string>
 </resources>
